[package]
name = "testaa"
version = "0.1.0"
authors = ["manitomanito"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.7", features = ["tokio", "pcap-savefile-append"] }
byteorder="1"
hex = "0.4.0"
structopt="0.3.2"
libc = "0.2"
